ADDED NEW PHRASES

--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@ a {
     <a href="/kahvia">Kahvia</a>
     <a href="/tillintallin">Tillintallin</a>
     <a href="/vittuluffis">Vittu Luffis</a>
+    <a href="/nalka">Nälkä</a>
+    <a href="/rahkaa">Rahkaa</a>
   </section>
 
   <script>
