Added two cool new messages

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@ a {
     <a href="/vittuluffis">Vittu Luffis</a>
     <a href="/nalka">Nälkä</a>
     <a href="/rahkaa">Rahkaa</a>
+    <a href="/tuntiviel">Tunti viel</a>
+    <a href="/millonsaalahtee">Millon saa lähtee?</a>
   </section>
 
   <script>
